Revise numerical experiments section

--- a/FJHown23.bib
+++ b/FJHown23.bib
@@ -120,6 +120,19 @@
 	Year = {2019},
 	Bdsk-Url-1 = {https://doi.org/10.1214/18-STS660}}
 
+@article{JagHic19a,
+	Author = {R. Jagadeeswaran and F. J. {\HickernellFJ}},
+	Date-Modified = {2019-09-10 22:01:11 +0000},
+	Doi = {10.1007/s11222-019-09895-9},
+	Journal = statcomp,
+	Pages = {1215--1229},
+	Pubtype = art,
+	Title = {Fast automatic {B}ayesian cubature using lattice sampling},
+	Volume = {29},
+	Issue = {6}
+	Year = 2019,
+	Bdsk-Url-1 = {https://doi.org/10.1007/s11222-019-09895-9}}
+    
 @incollection{HicKriWoz19a,
 	Author = {F. J. \HickernellFJ and P. Kritzer and H. Wo\'{z}niakowski},
 	Booktitle = {2018 MATRIX Annals},
@@ -149,15 +162,6 @@
 	Url = {https://www.samsi.info/programs-and-activities/year-long-research-programs/2017-18-program-quasi-monte-carlo-high-dimensional-sampling-methods-applied-mathematics-qmc/},
 	Bdsk-Url-1 = {https://www.samsi.info/programs-and-activities/year-long-research-programs/2017-18-program-quasi-monte-carlo-high-dimensional-sampling-methods-applied-mathematics-qmc/}}
 
-@article{RatHic19a,
-	Author = {R. Jagadeeswaran and F. J. \HickernellFJ},
-	Date-Added = {2018-03-02 00:09:58 +0000},
-	Date-Modified = {2019-04-14 12:25:41 -0500},
-	Journal = {Stat.\ Comput.},
-	Note = {Under revision},
-	Pubtype = sub,
-	Title = {Fast Automatic {B}ayesian Cubature Using Lattice Sampling},
-	Year = {2019+}}
 
 @misc{JohFasHic18a,
 	Author = {T. Johnson and G. E. Fasshauer and F. J. \HickernellFJ},
